Creado endpoint PUT /candidates/{candidateId}/applications/{applicationId}/stage
