# backend/src/presentation/controllers/candidateController.ts
@@ -1,5 +1,5 @@
 import { Request, Response } from 'express';
-import { addCandidate, findCandidateById } from '../../application/services/candidateService';
+import { addCandidate, findCandidateById, updateCandidateStage } from '../../application/services/candidateService';
 
 export const addCandidateController = async (req: Request, res: Response) => {
     try {
@@ -27,6 +27,32 @@ export const getCandidateById = async (req: Request, res: Response) => {
         }
         res.json(candidate);
     } catch (error) {
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
+
+export const updateCandidateStageController = async (req: Request, res: Response) => {
+    try {
+        const candidateId = parseInt(req.params.candidateId);
+        const applicationId = parseInt(req.params.applicationId);
+        const { stage } = req.body;
+
+        if (isNaN(candidateId) || isNaN(applicationId)) {
+            return res.status(400).json({ error: 'Invalid ID format' });
+        }
+
+        if (typeof stage !== 'number' || stage < 1) {
+            return res.status(400).json({ error: 'Invalid stage format' });
+        }
+
+        const updatedApplication = await updateCandidateStage(candidateId, applicationId, stage);
+        if (!updatedApplication) {
+            return res.status(404).json({ error: 'Application not found' });
+        }
+
+        res.json(updatedApplication);
+    } catch (error) {
+        console.error('Error updating candidate stage:', error);
         res.status(500).json({ error: 'Internal Server Error' });
     }
 };
